@@ -1,3 +1,10 @@
+2004-08-04 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+	* src/z80/main.c: enabled "critical" keyword
+	* src/z80/mappings.i,
+	* src/z80/gen.c (genFunction, genEndFunction): support for interrupt
+	functions (fixes bug #979646)
+	* doc/sdccman.lyx: added a subsection explaining z80 interrupt support
+
 2004-08-04 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>
 
 	* src/mcs51/gen.c (genInline): Add \n for labels, not DOS/WIN dirs
